🐛 Fix viewport sizes on mobile devices part 5

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -21,6 +21,7 @@
 
 /* Prevent font size inflation */
 html {
+  min-height: 100vh;
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
@@ -34,7 +35,7 @@ ol[role="list"] {
 
 /* Set core body defaults */
 body {
-  min-height: 100dvh;
+  height: 100%;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
